--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ img {
    list-style-type: none;
    display: flex;
    justify-content: center;
-   font-family: 'Changa';
+   font-family: 'Changa', sans-serif;
    font-size: 20px;
    padding: 1rem 0 0 0;
    transition: transform .5s;
@@ -86,7 +86,7 @@ img {
 .container-1 {
    text-align: center;
    margin-top: 8rem;
-   font-family: 'Changa';
+   font-family: 'Changa', sans-serif;
 }
 
 .sub-headline {
@@ -134,7 +134,7 @@ img {
    display: flex; 
    justify-content:center;
    align-items:center;
-   font-family: 'Changa';
+   font-family: 'Changa', sans-serif;
    letter-spacing: 5px;
 }
 
@@ -162,20 +162,20 @@ img {
    position: absolute; 
    bottom: 0rem; 
    color: rgb(255, 255, 255); 
-   background: rgba(0, 0, 0, 0.397); 
+   background: rgba(38, 204, 190, 0.527); 
    width: 100%;
    padding: 10px 0;
 }
 
 .bg:hover {
-   box-shadow: 2px 2px 10px rgb(0, 0, 0);
+   box-shadow: 3px 3px 14px rgba(0, 0, 0, 0.603);
    border-radius:10px ;
    transition: all 0.3s ease;
 }
 
 .bg .icon {
    margin-top: 2.6rem; 
-   color: rgb(255, 251, 0);
+   color: rgb(238, 255, 4);
 }
 
 .overlay > h4 {
@@ -183,7 +183,7 @@ img {
    left: 34px; 
    bottom: 2.3rem;
    font-size: 1.3rem;
-   font-family: 'Changa';
+   font-family: 'Changa', sans-serif;
    letter-spacing: 2px;
 }
 
@@ -215,8 +215,8 @@ img {
 
 
 .btn-find button {
-   background: rgba(0, 0, 0, 0.897); 
-   padding: .56rem 2.9rem; 
+   background: rgba(0, 0, 0, 0.589); 
+   padding: .46rem 2.9rem; 
    color: rgb(255, 255, 255); 
    border: none; 
    border-radius: 0; 
@@ -233,7 +233,7 @@ img {
 }
 
 .bg-book:hover {
-   box-shadow: 2px 2px 10px rgb(0, 0, 0);
+   box-shadow: 2px 2px 14px rgba(0, 0, 0, 0.342);
    border-radius:10px ;
    transition: all 0.3s ease;
 }
@@ -248,7 +248,7 @@ img {
    bottom: 23px;
    color: white;
    font-size: 1rem;
-   font-family: 'Changa';
+   font-family: 'Changa', sans-serif;
    letter-spacing: 3px;
    background-color: rgb(0, 0, 0);
    padding: 6px 16px;
@@ -277,7 +277,7 @@ img {
 }
 
 .category-list .category-title {
-   background: rgba(67, 183, 250, 0.712);
+   background: rgba(238, 238, 238, 0.712);
    padding: 12px 1rem;
    border-radius: 25px;
    margin-bottom: -20px;
@@ -422,7 +422,7 @@ img {
 }
 
 .bg-discount {
-   background-image: url('../background/photo1.jpeg');
+   background-image: url('../background/beach-bac01.jpg');
    width: 100%;
    height: 56vh;
    background-repeat: no-repeat;
@@ -464,12 +464,12 @@ img {
 .topCarousel {
    background: rgb(255, 255, 255); 
    outline: none; 
-   box-shadow: 0px 0px 50px rgba(24, 23, 23, 0.548); 
+   box-shadow: 0px 0px 20px rgba(91, 203, 255, 0.226); 
    border-radius: 30px;
 }
 
 .topCarousel:hover {
-   box-shadow: 3px 3px 10px black;
+   box-shadow: 3px 3px 10px rgba(1, 214, 252, 0.336);
 }
 
 .imgTop {
@@ -524,11 +524,19 @@ img {
    background: rgb(255, 255, 255);
    width: 22rem; 
    border-radius: 20px;
-   box-shadow: 0px 5px 10px rgba(24, 22, 22, 0.637);
+   box-shadow: 0px 5px 10px rgba(24, 22, 22, 0.171);
+}
+
+.card-join ul li {
+   color: rgb(5, 94, 172);
+}
+
+.card-body ul li {
+   color: rgb(5, 94, 172);
 }
 
 .card-join:hover {
-   box-shadow: 0px 0px 44px rgb(112, 112, 112);
+   box-shadow: 0px 0px 22px rgba(0, 0, 0, 0.075);
 }
 .card-img {
    border-radius: 20px;
@@ -539,7 +547,7 @@ img {
    justify-content: center; 
    background: yellow;
    border-radius: 20px;
-   box-shadow: 0px 5px 10px rgb(64, 65, 63);
+   box-shadow: 0px 5px 10px rgba(64, 65, 63, 0.247);
 }
 
 .lg-card {
@@ -567,12 +575,12 @@ img {
    width: 100%;
    height: 20vh; 
    cursor: pointer;
-   background: #e2e2e2b0;
+   background: #e2e2e27c;
    margin: 1rem ;
 }
 
 .brand-cardFix:hover {
-   background-color: rgba(255, 233, 31, 0.637);
+   background-color: rgb(255, 255, 255);
 }
 
 .brand-cardFix > a img {
@@ -629,7 +637,7 @@ img {
 .contact {
    position: absolute;
    bottom: 20px;
-   color: rgb(45, 26, 131);
+   color: rgb(31, 31, 31);
 }
 
 .contact span {
@@ -650,7 +658,7 @@ img {
    font-size: 2rem;
    padding-left: 1rem;
    margin-bottom: 2px;
-   color: rgb(88, 18, 145);
+   color: blueviolet;
    font-weight: 600;
    text-decoration: none;
 }
@@ -661,6 +669,12 @@ img {
    background-color: rgba(226, 226, 226, 0.904); 
    padding-top: 3rem;
 }
+
+.footer-bottom a {
+   color: rgb(2, 173, 165);
+}
+
+
 
 .footer-line {
    justify-content: center; 
@@ -722,23 +736,6 @@ img {
    border: none; 
    border-radius: 0;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
