--- a/css/travel.css
+++ b/css/travel.css
@@ -212,6 +212,7 @@ filter: brightness(1.1)drop-shadow(1px 8px 30px #b1afaf);
    list-style-type: none;
    padding: 7px 20px; 
    font-weight: 600;
+   color: rgb(53, 53, 82);
 }
 
 .head-us .card-body {
@@ -237,7 +238,7 @@ filter: brightness(1.1)drop-shadow(1px 8px 30px #b1afaf);
 
 /* Background Trip */
 .background-trip {
-   background-image: url('../background/bali.jpg');
+   background-image: url('../img/beaches-1.jpg');
    width: 100%;
    height: 50vh;
    background-repeat: no-repeat;
@@ -301,7 +302,6 @@ filter: brightness(1.1)drop-shadow(1px 8px 30px #b1afaf);
    width: 150px;
    height: 150px; 
    border-radius: 50%; 
-   margin-left: 50px;
 }
 
 
